mon: fix standby replay in multimds setup

The code should break loops for two level. otherwise, in multimds setup,
a standby mds may get assigned to standby replay multiple times. This
bug may cause monitor to crash.

Signed-off-by: "Yan, Zheng" <zyan@redhat.com>
Fixes: http://tracker.ceph.com/issues/23658
(cherry picked from commit 8d40e21de0a115cc92e4da04ec61a34ac59145e1)